--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dr. Ehab Al Shaer</title>
+  <title>Dr. Ehab Alshaer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <img src="profile.jpg" alt="Profile photo" class="profile-pic">
     <div class="info">
-      <h1>Dr. Ehab Al Shaer</h1>
-      <p>Assistant Professor | Department of Computer Science</p>
-      <p>University of [Your University Name]</p>
-      <p>Email: belal.shebl@university.edu</p>
-      <p>Office: Room 101, CS Building, University Campus</p>
+      <h1>Dr. Ehab Alshaer</h1>
+      <p><strong>Distinguished Research Fellow</strong></p>
+      <p>Institute of Software Research (ISR) and Faculty Member of CyLab,</p>
+      <p>School of Computer Science</p>
+      <p>Carnegie Mellon University</p>
+      <br>
+      <p><strong>Office:</strong> TCS Building, Office# 423, Pittsburgh, PA</p>
+      <p><strong>Office Phone:</strong> (412) 268-7899</p>
+      <p><strong>Email:</strong> &lt;Ehab&gt;@cmu.edu</p>
     </div>
   </header>
 
@@ -27,11 +31,15 @@
 
   <main>
     <section id="bio">
-      <h2>Biography</h2>
-      <p>
-        Dr. Ehab Al Shaer is an academic researcher in the fields of cybersecurity and AI. His work explores secure systems, data-driven defense strategies, and practical applications of cryptographic techniques in large-scale distributed environments...
-      </p>
-    </section>
+  <h2>Biography</h2>
+  <p><strong>Biography:</strong> Dr. Al-Shaer is a Distinguished Research Fellow at Institute of Software Research (ISR) in the School of Computer Science and Faculty Member of CyLab at Carnegie Mellon University. Dr. Al-Shaer has more than two decades as a researcher and educators in the field of Cybersecurity. Prior joining ISR/CMU, Prof. Al-Shaer was a Distinguished Career Professor at Information Networking Institute (INI) at Carnegie Mellon University and he was a Professor and the Founding Director of CyberDNA and NSF Cybersecurity Analytics and Automation (CCAA) centers in the University of North Carolina Charlotte from 2009–2020.</p>
+
+  <p>His area of research expertise includes (1) formal methods for security configuration verification, synthesis and hardening of enterprise, SDN, IoT and smart grid systems, (2) adaptive & automated cyber defense, (3) cyber and cyber-psychical resilience, (4) data-driven cybersecurity analytics, and (5) cyber agility for attack deterrence and deception. Dr. Al-Shaer has edited/co-edited more than 9 books and book chapters, published more than 200 refereed journals and conference papers in his area, and graduated more than 14 PhD students, who are working as tenure/tenure-track professors in academic institutions and researchers in industry labs.</p>
+
+  <p>He was designated by the Department of Defense (DoD) as a Subject Matter Expert (SME) on security analytics and automation in 2011, and he was awarded the IBM Faculty Award in 2012, and UNC Charlotte Faculty Research Award in 2013. During his academic career, Prof. Al-Shaer received more than $20M research funding from government agencies including NSF, NSA, DARPA, ARO, ARL, AFRL, ONR, and industry including IBM, Cisco, Intel, Bank of America, Wells Fargo, BB&T, DTCC, Duke Energy, CIS, RTI, and others.</p>
+
+  <p>Dr. Al-Shaer was the ARO Autonomous Cyber Deception Workshop in 2018, General Chair of ACM Computer and Communication in 2009 and 2010, NSF Workshop in Assurable and Usable Security Configuration in 2008. Dr. Al-Shaer was also the Program Committee Chair for many conferences and workshops including ACM/IEEE SafeConfig 2013 and 2015, IEEE Integrated Management (IM) 2007, IEEE POLICY 2008. Al-Shaer has two accepted patents and several submitted ones. He also has led several technology transfer projects. He is also an advisory board member for leading companies in cybersecurity automation.</p>
+</section>
 
     <section id="research">
       <h2>Research Interests</h2>
@@ -46,8 +54,8 @@
     <section id="publications">
       <h2>Selected Publications</h2>
       <ul>
-        <li>Shebl, B. "Securing Smart Grids Using Adaptive Analytics." *IEEE Transactions*, 2023.</li>
-        <li>Shebl, B. "Machine Learning for Cyber Resilience." *ACM CCS*, 2022.</li>
+        <li>Alshaer, E. "Securing Smart Grids Using Adaptive Analytics." *IEEE Transactions*, 2023.</li>
+        <li>Alshaer, E. "Machine Learning for Cyber Resilience." *ACM CCS*, 2022.</li>
       </ul>
     </section>
 
@@ -61,14 +69,14 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: belal.shebl@university.edu</p>
+      <p>Email: &lt;Ehab&gt;@cmu.edu</p>
       <p>Office Hours: Tue/Thu 2–4 PM</p>
-      <p>Location: Room 101, CS Building</p>
+      <p>Location: Room 423, TCS Building</p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Dr. Ehab Al Shaer — All rights reserved.
+    &copy; 2025 Dr. Ehab Alshaer — All rights reserved.
   </footer>
 </body>
 </html>
