updated links index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="#publications">Publications</a>
       <a href="#honors">Honors</a>
       <a href="#accomplishments">Accomplishments</a>
-      <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-      <a href="https://dl.acm.org" target="_blank">ACM DL</a>
+      <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en" target="_blank">Google Scholar</a>
+      <a href="https://dl.acm.org/profile/81339487878" target="_blank">ACM DL</a>
     </nav>
   </header>
 
