Update profile with books index.html

--- a/index.html
+++ b/index.html
@@ -21,18 +21,29 @@
     </nav>
   </header>
 
-  <section class="profile">
-    <img src="profile.jpg" alt="Dr. Ehab Alshaer">
-    <div class="info">
-      <p><strong>Distinguished Research Fellow</strong></p>
-      <p>Institute of Software Research (ISR) and Faculty Member of CyLab,<br>
-      School of Computer Science<br>
-      Carnegie Mellon University</p>
-      <p><strong>Office:</strong> TCS Building, Office# 423, Pittsburgh, PA</p>
-      <p><strong>Office Phone:</strong> (412) 268-7899</p>
-      <p><strong>Email:</strong> ehab@cmu.edu</p>
+<section id="profile">
+  <div class="profile-container">
+    <div class="profile-left">
+      <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
+      <div class="profile-text">
+        <h1>Dr. Ehab Alshaer</h1>
+        <p>
+          Distinguished Research Fellow<br>
+          Institute of Software Research (ISR) and Faculty Member of CyLab,<br>
+          School of Computer Science<br>
+          Carnegie Mellon University<br><br>
+          Office: TCS Building, Office# 423, Pittsburgh, PA<br>
+          Office Phone: (412) 268-7899<br>
+          Email: <a href="mailto:ehab@cmu.edu">ehab@cmu.edu</a>
+        </p>
+      </div>
     </div>
-  </section>
+    <div class="profile-right">
+      <img src="ehabBooks.jpg" alt="Dr. Alshaer's Books" class="books-image">
+    </div>
+  </div>
+</section>
+
 
   <section id="bio">
     <h2>Biography</h2>
