--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </section>
 
 
-  <section id="bio">
+  <section id="biography">
     <h2>Biography</h2>
     <p>Dr. Al-Shaer is a Distinguished Research Fellow at Institute of Software Research (ISR) in the School of Computer Science and Faculty Member of CyLab at Carnegie Mellon University. Dr. Al-Shaer has more than two decades as a researcher and educator in the field of Cybersecurity. Prior to joining ISR/CMU, Prof. Al-Shaer was a Distinguished Career Professor at the Information Networking Institute (INI) at Carnegie Mellon University and was a Professor and the Founding Director of CyberDNA and NSF Cybersecurity Analytics and Automation (CCAA) centers at the University of North Carolina Charlotte from 2009–2020.</p>
     <p>His research expertise includes:
