--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="#profile">Home</a>
       <a href="#biography">Biography</a>
+      <a href="#publications">Publications</a>
       <a href="#honors">Honors</a>
       <a href="#accomplishments">Accomplishments</a>
       <a href="https://scholar.google.com/citations?user=3UfG32sAAAAJ" target="_blank">Google Scholar</a>
