added icons ndex.html

--- a/index.html
+++ b/index.html
@@ -8,26 +8,36 @@
 </head>
 <body>
 
-  <header>
-    <h1>Dr. Ehab Alshaer</h1>
-    <nav>
-      <a href="#profile">Home</a>
-      <a href="#biography">Biography</a>
-      <a href="#publications">Publications</a>
-      <a href="#honors">Honors</a>
-      <a href="#accomplishments">Accomplishments</a>
-      <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
-      <a href="https://dl.acm.org/profile/81339487878" target="_blank">ACM DL</a>
-      <a href="projects.html" target="_blank">Projects & Tools</a>
-      <a href="talks.html" target="_blank">Invited Talks & Panels</a>
-      <a href="services.html" target="_blank">Professional Services</a>
-      <a href="students.html" target="_blank">Students & Supervision</a>
-    </nav>
-  </header>
+ <header>
+  <div class="title-container">
+    <h1 class="site-title">Dr. Ehab Al-Shaer</h1>
+  </div>
+  <div class="separator-line"></div>
+  <nav class="custom-navbar">
+    <a href="#biography">Biography</a>
+    <a href="#publications">Publications</a>
+    <a href="#honors">Honors</a>
+    <a href="#accomplishments">Accomplishments</a>
+    <a href="projects.html" target="_blank">Projects & Tools</a>
+    <a href="talks.html" target="_blank">Invited Talks & Panels</a>
+    <a href="services.html" target="_blank">Professional Services</a>
+    <a href="students.html" target="_blank">Students & Supervision</a>
+  </nav>
+</header>
+
 
 <section id="profile">
   <div class="profile-container">
     <div class="profile-left">
+      <div class="icon-links-below">
+  <a href="https://scholar.google.com/citations?user=3UfG32sAAAAJ" target="_blank">
+    <img src="googleScholar.jpg" alt="Google Scholar" class="icon-img-small">
+  </a>
+  <a href="https://dl.acm.org/profile/81469774394" target="_blank">
+    <img src="acmDL.jpg" alt="ACM DL" class="icon-img-small">
+  </a>
+</div>
+
       <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
       <div class="profile-text">
         <h1>Dr. Ehab Alshaer</h1>
