--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <div class="profile-container">
     <div class="profile-left">
       <div class="icon-links-below">
-  <a href="https://scholar.google.com/citations?user=3UfG32sAAAAJ" target="_blank">
-    <img src="googleScholar.jpg" alt="Google Scholar" class="icon-img-small">
+  <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
+    <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
   </a>
-  <a href="https://dl.acm.org/profile/81469774394" target="_blank">
-    <img src="acmDL.jpg" alt="ACM DL" class="icon-img-small">
+  <a href="https://dl.acm.org/profile/81339487878" target="_blank">
+    <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
   </a>
 </div>
 
