--- a/index.html
+++ b/index.html
@@ -7,38 +7,44 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="site-title">Dr. Ehab Al-Shaer</div>
+<div class="separator-line"></div>
 
- <header>
-  <div class="title-container">
-    <h1 class="site-title">Dr. Ehab Al-Shaer</h1>
-  </div>
-  <div class="separator-line"></div>
-  <nav class="custom-navbar">
-    <a href="#biography">Biography</a>
-    <a href="#publications">Publications</a>
-    <a href="#honors">Honors</a>
-    <a href="#accomplishments">Accomplishments</a>
-    <a href="projects.html" target="_blank">Projects & Tools</a>
-    <a href="talks.html" target="_blank">Invited Talks & Panels</a>
-    <a href="services.html" target="_blank">Professional Services</a>
-    <a href="students.html" target="_blank">Students & Supervision</a>
-  </nav>
-</header>
+
+ <!-- Site Title -->
+<div class="site-title">Dr. Ehab Al-Shaer</div>
+<div class="separator-line"></div>
+
+<!-- Navigation Bar -->
+<nav class="custom-navbar">
+  <a href="#biography">Biography</a>
+  <a href="#publications">Publications</a>
+  <a href="#honors">Honors</a>
+  <a href="#accomplishments">Accomplishments</a>
+  <a href="projects.html" target="_blank">Projects & Tools</a>
+  <a href="talks.html" target="_blank">Invited Talks & Panels</a>
+  <a href="services.html" target="_blank">Professional Services</a>
+  <a href="students.html" target="_blank">Students & Supervision</a>
+</nav>
+
 
 
 <section id="profile">
   <div class="profile-container">
     <div class="profile-left">
-      <div class="icon-links-below">
-  <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
-    <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
-  </a>
-  <a href="https://dl.acm.org/profile/81339487878" target="_blank">
-    <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
-  </a>
-</div>
+      <div>
+        <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
+        <!-- Icons Below Profile Picture -->
+        <div class="icon-links-below">
+          <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
+            <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
+          </a>
+          <a href="https://dl.acm.org/profile/81339487878" target="_blank">
+            <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
+          </a>
+        </div>
+      </div>
 
-      <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
       <div class="profile-text">
         <h1>Dr. Ehab Alshaer</h1>
         <p>
@@ -52,11 +58,13 @@
         </p>
       </div>
     </div>
+
     <div class="profile-right">
       <img src="ehabBooks.jpg" alt="Dr. Alshaer's Books" class="books-image">
     </div>
   </div>
 </section>
+
 
 
   <section id="biography">
