--- a/index.html
+++ b/index.html
@@ -27,39 +27,40 @@
 
 <section id="profile">
   <div class="profile-container">
+    <!-- Left: Profile Picture + Icons -->
     <div class="profile-left">
-      <div>
-        <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
-        <!-- Icons Below Profile Picture -->
-        <div class="icon-links-below">
-          <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
-            <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
-          </a>
-          <a href="https://dl.acm.org/profile/81339487878" target="_blank">
-            <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
-          </a>
-        </div>
-      </div>
-
-      <div class="profile-text">
-        <h1>Dr. Ehab Alshaer</h1>
-        <p>
-          Distinguished Research Fellow<br>
-          Institute of Software Research (ISR) and Faculty Member of CyLab,<br>
-          School of Computer Science<br>
-          Carnegie Mellon University<br><br>
-          Office: TCS Building, Office# 423, Pittsburgh, PA<br>
-          Office Phone: (412) 268-7899<br>
-          Email: <a href="mailto:ehab@cmu.edu">ehab@cmu.edu</a>
-        </p>
+      <img src="profile.jpg" alt="Dr. Ehab Alshaer" class="profile-pic">
+      <div class="icon-links-below">
+        <a href="https://scholar.google.com/citations?user=3ewd8VwAAAAJ&hl=en&oi=aoJ" target="_blank">
+          <img src="googleScholar.png" alt="Google Scholar" class="icon-img-small">
+        </a>
+        <a href="https://dl.acm.org/profile/81339487878" target="_blank">
+          <img src="acmDL.png" alt="ACM DL" class="icon-img-small">
+        </a>
       </div>
     </div>
 
+    <!-- Middle: Mini Biography -->
+    <div class="profile-text">
+      <h1>Dr. Ehab Alshaer</h1>
+      <p>
+        Distinguished Research Fellow<br>
+        Institute of Software Research (ISR) and Faculty Member of CyLab,<br>
+        School of Computer Science<br>
+        Carnegie Mellon University<br><br>
+        Office: TCS Building, Office# 423, Pittsburgh, PA<br>
+        Office Phone: (412) 268-7899<br>
+        Email: <a href="mailto:ehab@cmu.edu">ehab@cmu.edu</a>
+      </p>
+    </div>
+
+    <!-- Right: Books Image -->
     <div class="profile-right">
       <img src="ehabBooks.jpg" alt="Dr. Alshaer's Books" class="books-image">
     </div>
   </div>
 </section>
+
 
 
 
