Update button with enterindex.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <h2>Publications</h2>
     <input type="text" placeholder="Filter by keyword..." id="keyword">
     <button onclick="searchGoogleScholar()">Search</button>
+    <input type="text" placeholder="Filter by keyword..." id="keyword" onkeypress="if(event.key === 'Enter') searchGoogleScholar()">
     <p>Publications available via <a href="https://scholar.google.com" target="_blank">Google Scholar</a>.</p>
   </section>
 
