--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     const keyword = document.getElementById("keyword").value.trim();
     if (keyword) {
       const author = '"Ehab Alshaer"';
-      const query = encodeURIComponent(`author:${author} ${keyword}`);
+      const query = encodeURIComponent(`${author} ${keyword}`);
       const searchUrl = `https://scholar.google.com/scholar?q=${query}`;
       window.open(searchUrl, "_blank");
     } else {
