--- a/talks.html
+++ b/talks.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-  <!-- Navigation Bar -->
+  <!-- Navigation Bar (matching Projects page style) -->
   <nav class="navbar">
-    <ul>
+    <ul class="nav-links">
       <li><a href="#keynote">Keynote</a></li>
       <li><a href="#invited-talks">Invited Talks & Government Briefing</a></li>
       <li><a href="#panelist">Invited Panelist</a></li>
@@ -23,47 +23,45 @@
     <h1>Talks and Panels</h1>
   </header>
 
-  <!-- Keynote Section -->
+  <!-- Sections -->
   <section id="keynote">
     <h2>Keynote</h2>
     <p>Details about keynote speeches will be listed here.</p>
   </section>
 
-  <!-- Invited Talks & Government Briefing Section -->
   <section id="invited-talks">
     <h2>Invited Talks & Government Briefing</h2>
-    <p>Details about invited talks and briefings will be listed here.</p>
+    <p>Details about invited talks and government briefings will be listed here.</p>
   </section>
 
-  <!-- Invited Panelist Section -->
   <section id="panelist">
     <h2>Invited Panelist</h2>
-    <p>Details about panelist participation will be listed here.</p>
+    <p>Details about invited panels and conferences will be listed here.</p>
   </section>
 
-  <!-- Tutorial Presentations Section -->
   <section id="tutorials">
     <h2>Tutorial Presentations</h2>
     <p>Details about tutorial presentations will be listed here.</p>
   </section>
 
-  <!-- Technology Transfer Section -->
   <section id="tech-transfer">
     <h2>Technology Transfer</h2>
-    <p>Details about technology transfer will be listed here.</p>
+    <p>Details about technology transfer efforts will be listed here.</p>
   </section>
 
   <!-- Back to Top Button -->
   <button onclick="topFunction()" id="topBtn" title="Go to top">↑</button>
 
   <script>
-    // Back to Top functionality
-    let topBtn = document.getElementById("topBtn");
-    window.onscroll = function() {
-      topBtn.style.display = (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) ? "block" : "none";
+    // Show button when scrolling down
+    const topBtn = document.getElementById("topBtn");
+    window.onscroll = function () {
+      topBtn.style.display = (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20)
+        ? "block"
+        : "none";
     };
     function topFunction() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.scrollTo({ top: 0, behavior: "smooth" });
     }
   </script>
 
