--- a/talks.html
+++ b/talks.html
@@ -79,7 +79,7 @@
   </section>
 
   <section id="invited-panel">
-    <h2>2. Data-driven Cybersecurity Analytics for Cyber & Cyber-Physical Systems</h2>
+    <h2>Invited Panelist</h2>
     <div class="project">
     <ul>
       <li>“Active Cyber Defense for Resilient Infrastructure: Current Challenges and Future Directions” (with Arlette Hart, FBI, and Phil Quade, NSA), ACM CCS Workshop on Automated Decision Making for Active Cyber Defense, Oct 2015.</li>
@@ -106,7 +106,8 @@
   <section id="tutorial">
     <h2>Tutorial Presentations</h2>
     <div class="project">
-      <p>These tutorials were either invited or selected based on IEEE peer-review process:
+      <pre>
+These tutorials were either invited or selected based on IEEE peer-review process:
 07/2016   “A Tutorial on Moving Target Defense Research”, IIT-Bhubaneswar, India
 07/2016   “A Tutorial on Smart Grid Security and Resiliency Research”,  IIT-Bhubaneswar, India.
 10/12/11    “Configuration Analytics & Automation”, UNC Charlotte Cybersecurity Symposium
@@ -116,7 +117,7 @@
 12/2006   “Firewall and Security Policy Management”, KFUPM
 05/2005   “Managing Network Security Policies: Firewall and IPSec/VPN”, IEEE IM 2005
 04/2004   “Managing Firewall and Network-Edge Security Policies”, IEEE NOMS 2004.
-</p>
+</pre>
     </div>
     <!-- Add more projects -->
   </section>
@@ -125,13 +126,13 @@
     <h2>Technology Transfer</h2>
     <div class="project">
     <ul>
-      <li>Cisco INSPEC System: My group developed an automated tool for testing automatically the firewall implementation of policy enforcement using a novel testing technique called policy segmentation that minimizes the number of probe packets, while maintaining high accuracy. Our prototype was further developed as a tool that CISCO used locally for firewall automated testing that improves quality assurance.</li>
-      <li>Intel Security Policy Advisor: My group developed an automated tool for analyzing the firewall and IPSec polices for detecting configuration conflicts or inconsistencies, and recommending policy modification to fix the problem.</li>
-      <li>IP Mutation in Air Force SBIR Phase II: In collaboration with our DoD contractor partner, our team won the SBIR II award for developing our IP Mutation on Software Defined Networking. IP Mutation is a moving target defense technique that randomizes IP address in a network to disguise network assets identity.</li>
-      <li>NSA/APL ActiveSDN for Automated Response: We developed a novel reactive policy engine for automated proactive and reactive response to attacks or potential threats. The system, called CLIPS/ActiveSDN, can plan, deploy and orchestrate responses for thousands of active threats actions simultaneously, while guaranteeing the integrity of the network operations. The system was developed jointly with APL engineers (DoD contractors), and deployed in the DoD testbed used of the Integrated Active Cyber Defense (IACD) community.</li>
-      <li>Active Deception for ONR SBIR Phase I: In collaboration with our industry partner, our group won SBIR I award by the US Navy to develop active cyber defense that creates honey-games on demand.</li>
-      <li>CyberARM for Transition to Practice: In collaboration with Bank of America and Cyber Risk Research, we submitted a transition to practice proposal to NSF for developing a robust CyberARM tool, which is a tool developed by our group for cyber risk mitigation planning.  </li>
-      <li>CCAA-UNCC will demonstrate their tools in RSA Exhibition 2018: Our team have developed three novel and mature tools that address critical challenges in Cybersecurity: (1) CyberARM for cyber risk planning mitigation, (2) TTPDrill for analyzing cyber threat intelligence report, and (3) HIDE for high anonymity in cyber deception. These tools have been selected for demonstration in RSA 2018.</li>
+      <li><b>Cisco INSPEC System:</b> My group developed an automated tool for testing automatically the firewall implementation of policy enforcement using a novel testing technique called policy segmentation that minimizes the number of probe packets, while maintaining high accuracy. Our prototype was further developed as a tool that CISCO used locally for firewall automated testing that improves quality assurance.</li>
+      <li><b>Intel Security Policy Advisor:</b> My group developed an automated tool for analyzing the firewall and IPSec polices for detecting configuration conflicts or inconsistencies, and recommending policy modification to fix the problem.</li>
+      <li><b>IP Mutation in Air Force SBIR Phase II:</b> In collaboration with our DoD contractor partner, our team won the SBIR II award for developing our IP Mutation on Software Defined Networking. IP Mutation is a moving target defense technique that randomizes IP address in a network to disguise network assets identity.</li>
+      <li><b>NSA/APL ActiveSDN for Automated Response:</b> We developed a novel reactive policy engine for automated proactive and reactive response to attacks or potential threats. The system, called CLIPS/ActiveSDN, can plan, deploy and orchestrate responses for thousands of active threats actions simultaneously, while guaranteeing the integrity of the network operations. The system was developed jointly with APL engineers (DoD contractors), and deployed in the DoD testbed used of the Integrated Active Cyber Defense (IACD) community.</li>
+      <li><b>Active Deception for ONR SBIR Phase I:</b> In collaboration with our industry partner, our group won SBIR I award by the US Navy to develop active cyber defense that creates honey-games on demand.</li>
+      <li><b>CyberARM for Transition to Practice:</b> In collaboration with Bank of America and Cyber Risk Research, we submitted a transition to practice proposal to NSF for developing a robust CyberARM tool, which is a tool developed by our group for cyber risk mitigation planning.  </li>
+      <li><b>CCAA-UNCC will demonstrate their tools in RSA Exhibition 2018:</b> Our team have developed three novel and mature tools that address critical challenges in Cybersecurity: (1) CyberARM for cyber risk planning mitigation, (2) TTPDrill for analyzing cyber threat intelligence report, and (3) HIDE for high anonymity in cyber deception. These tools have been selected for demonstration in RSA 2018.</li>
     </ul>
     </div>
 
