--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
 
   <!-- Projects Navigation Bar -->
   <nav class="custom-navbar">
+    <a href="index.html">← Back to Main Page</a>
     <a href="#auto-verification">Automated Verification & Synthesis</a>
     <a href="#data-analytics">Data-driven Cybersecurity Analytics</a>
     <a href="#cyber-physical">Security for Cyber-Physical Systems</a>
