--- a/talks.html
+++ b/talks.html
@@ -13,7 +13,7 @@
 
   <!-- Projects Navigation Bar -->
   <nav class="custom-navbar">
-    <a href="index.html">← Back to Main Page</a>
+    <a href="index.html">Back to Main Page</a>
     <a href="#keynote">Keynote, Invited Talks and Government Briefing</a>
     <a href="#invited-panel">Invited Panelist</a>
     <a href="#tutorial">Tutorial Presentations</a>
